syntax = "proto3";

package sentinel;
option go_package="github.com/upmio/unit-operator/pkg/agent/app/sentinel";

message UpdateRedisReplicationRequest {
  string redis_replication_name = 1;
  string namespace = 2;
  string master_host = 3;
  string self_unit_name = 4;
}

message Response {
  string message = 1;
}

service SentinelOperation {
  rpc UpdateRedisReplication (UpdateRedisReplicationRequest) returns (Response);
}