syntax = "proto3";

package service;
option go_package="github.com/upmio/unit-operator/pkg/agent/app/service";

message ServiceRequest {
}

message ServiceResponse {
  string message = 1;
}

service ServiceLifecycle {
  rpc StartService (ServiceRequest) returns (ServiceResponse);
  rpc StopService (ServiceRequest) returns (ServiceResponse);
  rpc RestartService (ServiceRequest) returns (ServiceResponse);
  rpc GetServiceStatus (ServiceRequest) returns (ServiceStatusResponse);
  rpc CheckServiceStatus (ServiceRequest) returns (ServiceResponse);
  rpc CheckServiceStopped (ServiceRequest) returns (ServiceResponse);
}

enum ProcessState {
  StateStopped = 0;
  StateStarting = 1;
  StateRunning = 2;
  StateBackoff = 3;
  StateStopping = 4;
  StateExited = 5;
  StateFatal = 6;
  StateUnknown = 7;
}

message ServiceStatusResponse {
  ProcessState ServiceStatus = 1;
}